Add french translations to the example app, extend the available locales and change the default locale

--- a/example/config/locales/de.yml
+++ b/example/config/locales/de.yml
@@ -2,10 +2,10 @@ de:
   home: "Startseite"
   imprint: "Impressum"
   link_to_english: "englisch"
+  link_to_french: "französisch"
   link_to_german: "deutsch"
   link_to_home: "Start"
   link_to_imprint: "Impressum"
   locales: "Sprachen"
   navigation: "Navigation"
-  
   
