--- a/README.textile
+++ b/README.textile
@@ -58,22 +58,12 @@ Define the available locales inside the array. The locales should be set as symb
 
 
 
-h2. Future
-
-The next features that could be implement:
-
-* Instead of using a query string like @?locale=de@ it should be possible to set the locale inside the path. For example _http://www.example.com/de_, _http://www.example.com/posts/123/comments/de_
-* Rewrite all hyperlinks in the returned result of the rails app, so that _http://www.example.com/posts/123/comments?locale=de_ gets converted to _http://www.example.com/posts/123/comments/de_
-* create a gem
-* predict the default locale based on the users ip address
-
-
-
 h2. Test
 
-To run the test's just execute @spec ./spec@
+To run the test's just execute 
+<pre>spec ./spec</pre>
 
-I used a FakeApp to simulate this App as a middleware.This is done with the help of RackBuilder:
+I used a FakeApp to simulate this App as a middleware.This is done with the help of "RackBuilder":http://rack.rubyforge.org/doc/classes/Rack/Builder.html
 
 <pre>Rack::Builder.app do
   use Rack::I18nLocaleSwitcher
@@ -86,4 +76,29 @@ You can run the FakeApp directly:
 rackup</pre>
 
 
-The next step is to extend the FakeApp. They should return the current I18n.locale.
+The FakeApp respond to the following requests:
+
+* get '/test'
+* get '/locale'
+* get '/home'
+* get '/imprint'
+
+
+
+h2. Future
+
+The next features that could be implement:
+
+* Instead of using a query string like @?locale=de@ it should be possible to set the locale inside the path. For example _http://www.example.com/de_, _http://www.example.com/posts/123/comments/de_
+* Rewrite all hyperlinks in the returned result of the rails app, so that _http://www.example.com/posts/123/comments?locale=de_ gets converted to _http://www.example.com/posts/123/comments/de_
+* create a gem
+* predict the default locale based on the users ip address
+
+
+
+h2. Links
+
+* "Rack documentation":http://rack.rubyforge.org/doc/
+* "Rack-Test":http://github.com/brynary/rack-test
+* "Testing Sinatra with Rack::Test":http://www.sinatrarb.com/testing.html
+* "RSpec":http://rspec.info/documentation/
