--- a/README.textile
+++ b/README.textile
@@ -11,9 +11,13 @@ h2. History
 h3. Basic functionality
 
 * Create a new "Rack::Request":http://rack.rubyforge.org/doc/classes/Rack/Request.html object an extract the params and the session.
-* Instead of using a query string like @?locale=de@ it is possible to set the locale inside the path. For example _http://www.example.com/de_, _http://www.example.com/posts/123/comments/de_ Using this method should be prefered.
+* Instead of using a query string like @?locale=de@ it is possible to set the locale inside the path. 
+  For example _http://www.example.com/de_, _http://www.example.com/de/posts/123/comments_. 
+  Using this method should be prefered.
 * store the @locale@ value in @session["locale"]@ if present
 * Set the "I18n.locale":http://guides.rubyonrails.org/i18n.html to whatever is stored inside @session["locale"]@ or, if not present, a defined default locale
+* Removing the locale part from @ENV[REQUEST_URI | REQUEST_PATH | PATH_INFO]@, if there is something like a locale part, 
+  so that the including App doesn't see the locale
 
 
 h3. Available locales and default locale
