Example application : Add helper for generating a link to the current controller / action with a given locale. Definition of exceptions for actions which can not be called with GET.

--- a/example/config/locales/de.yml
+++ b/example/config/locales/de.yml
@@ -1,7 +1,7 @@
 de:
-  link_to_english: "englisch"
-  link_to_french: "französisch"
-  link_to_german: "deutsch"
+  language_de: "deutsch"
+  language_en: "englisch"
+  language_fr: "französisch"
   link_to_home: "Start"
   link_to_imprint: "Impressum"
   locales: "Sprachen"
